// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ MutateOwnerReportModal ]] renders MutateOwnerReportModal in create report mode: {"editMode":false,"level":"REPOSITORY"} 1`] = `
"<zmodal-stub title=\\"Share report\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <fieldset class=\\"p-4 flex flex-col gap-y-7\\"><label for=\\"report-title\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub name=\\"\\" value=\\"\\" label=\\"\\" type=\\"text\\" placeholder=\\"What’s this report for?\\" debouncedelay=\\"350\\" size=\\"small\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" required=\\"true\\" id=\\"report-title\\"></zinput-stub>
      <p class=\\"flex items-center gap-x-1 text-vanilla-400 text-xs\\">
        This is used for internal reference only
      </p>
    </label>
    <!---->
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Security</p>
        <zcheckbox-stub label=\\"OWASP Top 10\\" name=\\"\\" value=\\"owasp-top-10\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"SANS Top 25\\" name=\\"\\" value=\\"sans-top-25\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub label=\\"Issue Distribution\\" name=\\"\\" value=\\"issue-distribution\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub> <label for=\\"source-repos\\" class=\\"space-y-2 text-sm\\">
      <p class=\\"font-medium text-vanilla-100\\">Select repositories</p>
      <div role=\\"radiogroup\\" class=\\"z-radio-group grid grid-cols-2\\" id=\\"source-repos\\">
        <div><label class=\\"z-radio text-vanilla-100 flex items-center cursor-pointer\\"><span class=\\"z-radio--inner rounded-full w-4 h-4 relative cursor-pointer inline-block box-border border-solid border-2 border-slate bg-transparent cursor-pointer hover:border-juniper\\"><!----></span><input type=\\"radio\\" class=\\"opacity-0 absolute h-0 w-0\\" value=\\"SOURCE_SELECTED\\"><span class=\\"label ml-2 cursor-pointer\\"> Custom repositories </span></label>
          <!---->
        </div> <label class=\\"z-radio text-vanilla-100 flex items-center place-self-start cursor-pointer\\"><span class=\\"z-radio--inner rounded-full w-4 h-4 relative cursor-pointer inline-block box-border border-solid border-2 border-juniper bg-juniper cursor-pointer hover:border-juniper\\"><span class=\\"w-2 h-2 rounded-full absolute left-50 top-50 transform -translate-x-1/2 -translate-y-1/2 bg-vanilla-100\\"></span></span><input type=\\"radio\\" class=\\"opacity-0 absolute h-0 w-0\\" value=\\"SOURCE_ALL\\"><span class=\\"label ml-2 cursor-pointer\\"> All repositories </span></label>
      </div>
    </label>
  </fieldset>
</zmodal-stub>"
`;

exports[`[[ MutateOwnerReportModal ]] renders MutateOwnerReportModal in edit report mode: {"editMode":false,"level":"REPOSITORY","isRestrictedOld":true,"reportIdOld":"aa183352-4b5e-427a-ac8d-95c47c52b6a1","reportKeysOld":["owasp-top-10","sans-top-25"],"reportLabelOld":"Sample Report","shareHistoricalDataOld":true,"reportSourceOld":"SOURCE_SELECTED","sourcedRepositoriesOld":["UmVwb3NpdG9yeTp6dmp2eXo=","UmVwb3NpdG9yeTp6dmpleXo=","UmVwb3NpdG9yeTp6Z2tlZHo="]} 1`] = `
"<zmodal-stub title=\\"Share report\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <fieldset class=\\"p-4 flex flex-col gap-y-7\\"><label for=\\"report-title\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub name=\\"\\" value=\\"\\" label=\\"\\" type=\\"text\\" placeholder=\\"What’s this report for?\\" debouncedelay=\\"350\\" size=\\"small\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" required=\\"true\\" id=\\"report-title\\"></zinput-stub>
      <p class=\\"flex items-center gap-x-1 text-vanilla-400 text-xs\\">
        This is used for internal reference only
      </p>
    </label> <label for=\\"report-link\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Shareable link</p>
      <zinput-stub name=\\"\\" value=\\"https://deepsource.io/report/aa183352-4b5e-427a-ac8d-95c47c52b6a1\\" label=\\"\\" type=\\"text\\" placeholder=\\"Shareable link for the report...\\" readonly=\\"true\\" debouncedelay=\\"350\\" size=\\"medium\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" id=\\"report-link\\"><template></template></zinput-stub>
    </label>
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Security</p>
        <zcheckbox-stub label=\\"OWASP Top 10\\" name=\\"\\" value=\\"owasp-top-10\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"SANS Top 25\\" name=\\"\\" value=\\"sans-top-25\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub label=\\"Issue Distribution\\" name=\\"\\" value=\\"issue-distribution\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub> <label for=\\"source-repos\\" class=\\"space-y-2 text-sm\\">
      <p class=\\"font-medium text-vanilla-100\\">Select repositories</p>
      <div role=\\"radiogroup\\" class=\\"z-radio-group grid grid-cols-2\\" id=\\"source-repos\\">
        <div><label class=\\"z-radio text-vanilla-100 flex items-center cursor-pointer\\"><span class=\\"z-radio--inner rounded-full w-4 h-4 relative cursor-pointer inline-block box-border border-solid border-2 border-slate bg-transparent cursor-pointer hover:border-juniper\\"><!----></span><input type=\\"radio\\" class=\\"opacity-0 absolute h-0 w-0\\" value=\\"SOURCE_SELECTED\\"><span class=\\"label ml-2 cursor-pointer\\"> Custom repositories </span></label>
          <!---->
        </div> <label class=\\"z-radio text-vanilla-100 flex items-center place-self-start cursor-pointer\\"><span class=\\"z-radio--inner rounded-full w-4 h-4 relative cursor-pointer inline-block box-border border-solid border-2 border-juniper bg-juniper cursor-pointer hover:border-juniper\\"><span class=\\"w-2 h-2 rounded-full absolute left-50 top-50 transform -translate-x-1/2 -translate-y-1/2 bg-vanilla-100\\"></span></span><input type=\\"radio\\" class=\\"opacity-0 absolute h-0 w-0\\" value=\\"SOURCE_ALL\\"><span class=\\"label ml-2 cursor-pointer\\"> All repositories </span></label>
      </div>
    </label>
  </fieldset>
</zmodal-stub>"
`;
